fixed some inconsistencies in the if-else spacing and it's the return of the close buttons

--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -231,10 +231,20 @@ header{
 	right: 0;
 	z-index: 999;
 	@include borderbox;
-	margin: $xlarge;
 	padding: $size;
 	background-color: lighten($bg-color, 50%);
-	@include box-shadow(0 1px 2px darken($bg-color, 10%));
+	@include box-shadow(0 1px 2px darken($bg-color, 35%));
+}
+
+.popup-close{
+	@include borderbox;
+	float: right;
+	margin-top: $size;
+	font-size: $size*0.85;
+	padding: $xsmall $small;
+	background-color: lighten($bg-color, 50%);
+	border: 1px solid $bg-color;
+	@include box-shadow(0 1px 2px darken($bg-color, 15%));
 }
 
 #settings-modal{
